homepage and signup/sign/in

--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
             </div>
         </nav>
 
+
+
+        <!-- landing -->
         <section class="mt-5">
 
             <div class="container-fluid py-5">
                 <div class="row ">
                     <!-- left side text -->
                     <div class="col-6 d-flex justify-content-center">
-                        <p class="landingHead font-tektur">Fire Ecology</p>
+                        <p class="fs-1 font-tektur">[Landing Page]</p>
                     </div>
 
                     <!-- right side img -->
@@ -86,6 +89,9 @@
         </section>
 
 
+
+
+
         <!-- Section 1 -->
         <section class="mt-5 bgWhat">
 
@@ -97,7 +103,7 @@
                     class="shape-fill" fill="black" fill-opacity="1"></path>
             </svg>
 
-            <div style="height: 50px;"></div>
+            <div style="height: 20px;"></div>
 
 
             <div class="container-fluid">
@@ -120,7 +126,7 @@
 
 
                     <!-- img -->
-                    <div class="col-9 col-lg-5 mt-5 text-center">
+                    <div class="col-9 col-lg-5 mt-5 mt-lg-0 text-center my-auto">
                         <img src="https://via.placeholder.com/400x300" alt="placeholder">
                     </div>
                 </div>
@@ -144,14 +150,14 @@
                     class="bgWhat" fill="currentcolor" fill-opacity="1"></path>
             </svg>
 
-            <div style="height: 50px;"></div>
+            <div style="height: 20px;"></div>
 
 
             <div class="container-fluid">
                 <div class="row justify-content-evenly">
 
                     <div class="col-12 text-center">
-                        <h3 class="fs-2">Organisations on Fire Ecology?</h3>
+                        <h3 class="fs-2">Organisations</h3>
 
                     </div>
 
@@ -178,17 +184,17 @@
 
                     <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
-                        <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
+                        <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
 
-                        <div style="height: 50px;"></div>
-                        <p class="fs-5 rocket-text font-exo text-justify">PyroLife is a European Union-funded
-                            project that trains early-stage researchers in various aspects of fire ecology and
-                            management. It aims to build a new generation of experts equipped to address the complex
-                            challenges of fire-prone landscapes.
-                        </p>
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">IAWF stands for International Association
+                                of Wildland Fire. It is a global network of experts, researchers, and professionals
+                                dedicated to
+                                advancing the knowledge and management of wildland fires. They provide resources,
+                                conferences, and collaboration opportunities for those involved in fire ecology.</p>
 
-                        </p>
+                            </p>
 
                     </div>
 
