--- a/signup.html
+++ b/signup.html
@@ -28,13 +28,13 @@
                 <div class="col-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
                     <div class="card border-0 shadow-lg rounded-4 my-5 p-5  bgblack">
 
-
-                        <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="2.8em" fill="white"
-                            class="bi bi-fire " viewBox="0 0 16 16">
-                            <path
-                                d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
-                        </svg>
-
+                        <a href="index.html" class="text-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="2.8em" fill="white"
+                                class="bi bi-fire " viewBox="0 0 16 16">
+                                <path
+                                    d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
+                            </svg>
+                        </a>
 
                         <p class="text-center mb-2 fw-bold fs-2 mt-3 ">Sign Up</p>
 
@@ -42,23 +42,14 @@
 
                         <form>
 
-                            <div class="form-floating mb-3 ">
-                                <input type="text" class="form-control required signField" id="signUpUsername"
-                                    placeholder="Enter your Email">
-                                <label for="signUpUsername ">Username</label>
-                            </div>
-
-
+                            <!-- email -->
                             <div class="form-floating mb-3 ">
                                 <input type="email" class="form-control required signField" id="signUpEmail"
                                     placeholder="Enter your Email">
                                 <label for="signUpEmail ">Email</label>
                             </div>
 
-
-
-
-
+                            <!-- pass -->
                             <div class="form-floating mb-2 ">
                                 <input type="password" class="form-control required signField" id="signUpPassword"
                                     placeholder="Password">
@@ -73,7 +64,7 @@
                             </div>
 
                             <p class="text-center mb-4 fw-bold fs-6 mt-4 ">Already a member? <br><a href="signin.html"
-                                    class="text-decoration-none"> Sign-In
+                                    class="text-decoration-none signOther"> Sign-In
                                     instead</a></p>
                         </form>
 
