--- a/about.html
+++ b/about.html
@@ -46,18 +46,33 @@
 
 
             <div class="collapse navbar-collapse me-3" id="navbarTwo">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto  d-flex align-items-center ">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
                                 class="nav-link hover-orange ">Home</a></b>
                     </li>
+
+
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange active">About</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
-                                class="nav-link  hover-orange">Effects</a></b>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link  hover-orange">Blog</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Videos</a></b>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Media</a></b>
+                    </li>
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray" id="profileIcon"
+                                    class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
+                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                    <path fill-rule="evenodd"
+                                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                </svg>
+                            </a> </b>
                     </li>
 
 
@@ -161,9 +176,6 @@
                                 the vegetation. The burn mosaic results in varied regrowth rates that
                                 creates a vegetation mosaic.</p>
 
-
-
-
                             </p>
 
                         </div>
@@ -178,13 +190,14 @@
 
                             <div style="height: 50px;"></div>
                             <p class="fs-5 rocket-text font-exo text-justify">Wildland fires can be both a detriment and
-                                a benefit to soil. The soil can become more nu- trient-rich after a fire due to the high
+                                a benefit to soil. The soil can become more nutrientrich after a fire due to the high
                                 mineral content of the ash and charcoal and also due to the warm, moist conditions that
                                 increase microbial activity. The intense heat can also cause soil particles to become
                                 water-repellant, causing rainwater to run off. As the water runs off it can carry soil
                                 particles with it and lead to erosion.</p>
 
                             </p>
+
 
                         </div>
 
