--- a/index.html
+++ b/index.html
@@ -45,18 +45,33 @@
 
 
             <div class="collapse navbar-collapse me-3" id="navbarTwo">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto  d-flex align-items-center ">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
                                 class="nav-link hover-orange active">Home</a></b>
                     </li>
+
+
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange">About</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
-                                class="nav-link  hover-orange">Effects</a></b>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link  hover-orange">Blog</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Videos</a></b>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Media</a></b>
+                    </li>
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray" id="profileIcon"
+                                    class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
+                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                    <path fill-rule="evenodd"
+                                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                </svg>
+                            </a> </b>
                     </li>
 
 
@@ -121,7 +136,7 @@
 
 
 
-                        <a class="btn button mt-4 fs-6 px-3" href="about.html#defination">Know More!</a>
+                        <a class="btn button-l1 mt-4 fs-6 px-3" href="about.html#defination">Know More!</a>
                     </div>
 
 
@@ -134,8 +149,6 @@
                 <div style="height: 50px;"></div>
             </div>
         </section>
-
-
 
 
 
@@ -187,21 +200,95 @@
                         <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
 
-                            <div style="height: 50px;"></div>
-                            <p class="fs-5 rocket-text font-exo text-justify">IAWF stands for International Association
-                                of Wildland Fire. It is a global network of experts, researchers, and professionals
-                                dedicated to
-                                advancing the knowledge and management of wildland fires. They provide resources,
-                                conferences, and collaboration opportunities for those involved in fire ecology.</p>
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">IAWF stands for International Association
+                            of Wildland Fire. It is a global network of experts, researchers, and professionals
+                            dedicated to
+                            advancing the knowledge and management of wildland fires. They provide resources,
+                            conferences, and collaboration opportunities for those involved in fire ecology.</p>
 
-                            </p>
+                        </p>
 
                     </div>
 
                 </div>
 
                 <div class="text-center mt-3">
-                    <a href="about.html#organisations" class="btn button fs-6 px-3">Know More!</a>
+                    <a href="about.html#organisations" class="btn button-l1 fs-6 px-3">Know More!</a>
+                </div>
+
+                <div style="height: 50px;"></div>
+            </div>
+        </section>
+
+
+
+        <!-- Section 3 -->
+        <section class="bgEffects">
+
+            <!-- curve -->
+            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="bgorganisation" fill="currentcolor" fill-opacity="1"></path>
+            </svg>
+
+            <div style="height: 20px;"></div>
+
+
+            <div class="container-fluid">
+                <div class="row justify-content-evenly">
+
+                    <div class="col-12 text-center">
+                        <h3 class="fs-2">Fire with EcoSystems</h3>
+
+                    </div>
+
+                </div>
+
+
+                <div class="row justify-content-evenly mt-5">
+
+                    <div class="col-10 col-md-8 col-lg-5 effect-card rounded-4 shadow-lg p-4 my-4">
+
+                        <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
+
+
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">Wildland fires create a mixture of totally
+                            burned,
+                            partially burned, and unburned sections called a burn mosaic.
+                            The varying degrees of burn are a result of many factors including wind shifts,
+                            daily temperature changes, moisture levels, and varying chemical composition of
+                            the vegetation. The burn mosaic results in varied regrowth rates that
+                            creates a vegetation mosaic.</p>
+
+                        </p>
+
+                    </div>
+
+                    <div class="col-10 col-md-8 col-lg-5 effect-card rounded-4 shadow-lg p-4 my-4">
+
+                        <p class="fs-1 text-center font-tektur mt-3 "> Soil</p>
+
+
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">Wildland fires can be both a detriment and
+                            a benefit to soil. The soil can become more nutrientrich after a fire due to the high
+                            mineral content of the ash and charcoal and also due to the warm, moist conditions that
+                            increase microbial activity. The intense heat can also cause soil particles to become
+                            water-repellant, causing rainwater to run off. As the water runs off it can carry soil
+                            particles with it and lead to erosion.</p>
+
+                        </p>
+
+                    </div>
+
+                </div>
+
+                <div class="text-center mt-3">
+                    <a href="about.html#environmentEff" class="btn button-l2 fs-6 px-3">Know More!</a>
                 </div>
 
                 <div style="height: 50px;"></div>
@@ -211,9 +298,7 @@
 
 
 
-
-
-
+        <script src="authentications.js"></script>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
