--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                     <!-- img -->
                     <div class="col-9 col-lg-5 mt-5 mt-lg-0 text-center my-auto">
-                        <img src="https://via.placeholder.com/400x300" alt="placeholder">
+                        <img src="img/earthFIreEco.png" class="img-fluid" style="max-height: 450px;" alt="placeholder">
                     </div>
                 </div>
 
