--- a/signup.html
+++ b/signup.html
@@ -42,10 +42,19 @@
 
                         <form>
 
+
+                            <!-- username -->
+                            <div class="form-floating mb-3 ">
+                                <input type="email" class="form-control required signField" id="signUpUsername"
+                                    placeholder="Username">
+                                <label for="signUpUsername ">Username</label>
+                            </div>
+
+
                             <!-- email -->
                             <div class="form-floating mb-3 ">
                                 <input type="email" class="form-control required signField" id="signUpEmail"
-                                    placeholder="Enter your Email">
+                                    placeholder="Email">
                                 <label for="signUpEmail ">Email</label>
                             </div>
 
