--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- navbar-->
         <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
 
-            <div class="container align-items-center">
+            <div class="container-fluid align-items-center">
 
                 <a href="index.html" class="nav-brand text-light p-2 fs-3 ms-3">
 
@@ -57,7 +57,7 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link  hover-orange">Blog</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html" class="nav-link  hover-orange">Blog</a></b>
                     </li>
 
 
