--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>NAME</title>
+        <title>Fire Ecology | Blog</title>
 
 
         <!-- Bootstrap  -->
@@ -16,7 +16,7 @@
 
     </head>
 
-    <body class="bgblack">
+    <body class="bgblack" onload="loadBlogs()">
 
 
         <!-- navbar-->
@@ -59,7 +59,7 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Media</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="" class="nav-link hover-orange">Media</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
@@ -72,7 +72,7 @@
                             </a> </b>
                     </li>
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link">
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blogwrite.html" class="nav-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
                                     class="bi bi-pencil-square hover-orange" viewBox="0 0 16 16">
                                     <path
@@ -100,17 +100,25 @@
                 <div class="row justify-content-evenly" id="blogList">
 
                     <!-- One -->
-                    <div class="col-5 col-lg-3 blog-card rounded-4 shadow-lg p-4 my-4">
+                    <div class="col-8 col-sm-5 col-lg-4 col-xl-3 mx-1 blog-card rounded-2 shadow-lg my-4  " >
 
+                        <div class="text-center my-4 ">
+                            <h2 class="fs-4"> Title (max 50 characters)</h2>
+                        </div>
 
+                        <div class="text-center mt-3 mb-5">
+                            <h3 class="fs-6">By: Max (22 character)</h3>
+                        </div>
+
+                        <div class="text-center mt-3">
+                            <h3 class="fs-6">Blog description (120 characters)</h3>
+                        </div>
+
+                        <div class="text-center mt-4 mb-4">
+                            <a href="" class="btn buttonPost">Read </a>
+                        </div>
                     
                     </div>
-
-
-                    
-
-
-
 
 
 
@@ -118,6 +126,9 @@
             </div>
         </section>
 
+
+
+        <script src="blogLoader.js"></script>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
