--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html" class="nav-link  hover-orange">Blog</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
+                                class="nav-link  hover-orange">Blog</a></b>
                     </li>
 
 
@@ -104,7 +105,7 @@
         </section>
 
 
-
+        
 
 
         <!-- Section 1 -->
