--- a/signup.html
+++ b/signup.html
@@ -86,11 +86,10 @@
             </div>
         </div>
 
-
-
-        <!-- Firebase Connection -->
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <!-- Firebase Connection -->
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <!-- Application Script -->
         <script src="authentications.js"></script>
