--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAs.css">
+        <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
