--- a/blogwrite.html
+++ b/blogwrite.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAs.css">
-
+        <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
@@ -134,7 +135,7 @@
 
                         <a href="" class="btn buttonPost px-3">Post</a>
 
-                        
+
                     </div>
                 </div>
             </div>
