--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+        <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAd.css">
         <!-- Animate on Scroll -->
