--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,9 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styleAs.css">
 
+        <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
 
     <body class=" translucent-black ">
