blog views and blog meta tag

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAs.css">
 
+        <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
 
@@ -126,6 +128,24 @@
             </div>
         </section>
 
+<!-- 
+        <section id="blogSections">
+            <div class="container">
+                <div class="row justify-content-evenly" id="blogList">
+
+                    <div class="col-11 col-sm-12 blog-card rounded-3 p-3 d-flex align-items-center">
+
+                        <p class="me-auto fs-4 ">The day of the dead</p>
+
+                        <a href="" class="btn buttonRead ms-auto">Read</a>
+
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section> -->
 
 
         <script src="blogLoader.js"></script>
