--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 
         <!-- viewport IMPORTANT FOR RESPONSIVENESS -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
     </head>
 
     <body class=" translucent-black ">
@@ -28,9 +28,10 @@
 
 
                 <!-- form -->
-                <div class="col-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
                     <div class="card border-0 shadow-lg rounded-4 my-5 p-5  bgblack">
 
+                        <!-- fire logo -->
                         <a href="index.html" class="text-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="2.8em" fill="white"
                                 class="bi bi-fire " viewBox="0 0 16 16">
@@ -39,9 +40,13 @@
                             </svg>
                         </a>
 
+                        <!-- headin -->
                         <p class="text-center mb-2 fw-bold fs-2 mt-3 ">Sign Up</p>
 
                         <hr class="my-4 mb-5 mx-auto" style="width: 80%;">
+
+
+
 
                         <form>
 
