--- a/signin.html
+++ b/signin.html
@@ -28,7 +28,7 @@
 
 
                 <!-- form -->
-                <div class="col-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
                     <div class="card border-0 shadow-lg rounded-4 my-5 p-5  bgblack">
 
 
