changed padding on sign-in and sign-up

--- a/signin.html
+++ b/signin.html
@@ -21,15 +21,15 @@
     <body class=" translucent-black ">
 
 
-        <div class="container pt-3">
+        <div class="container ">
 
-            <div class="row justify-content-center align-items-center pt-3">
+            <div class="row justify-content-center align-items-center ">
 
 
 
                 <!-- form -->
                 <div class="col-11 col-sm-10 col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
-                    <div class="card border-0 shadow-lg rounded-4 my-5 p-5  bgblack">
+                    <div class="card border-0 shadow-lg rounded-4 my-5 px-4 p-md-5 py-5  bgblack">
 
 
                         <a href="index.html" class="text-center">
