--- a/index.html
+++ b/index.html
@@ -297,7 +297,10 @@
         </section>
 
 
-
+               <!-- Firebase Connection -->
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <script src="authentications.js"></script>
 
