--- a/signin.html
+++ b/signin.html
@@ -46,7 +46,7 @@
                             <div class="form-floating mb-3 ">
                                 <input type="email" class="form-control required signField" id="signInEmail"
                                     placeholder="Enter your Email">
-                                <label for="SignInEmail ">Email</label>
+                                <label for="SignInEmail">Email</label>
                             </div>
 
 
@@ -79,9 +79,10 @@
 
 
 
-        <!-- Firebase Connection -->
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <!-- Firebase Connection -->
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <!-- Application Script -->
         <script src="authentications.js"></script>
