max words in blog

--- a/blogwrite.html
+++ b/blogwrite.html
@@ -102,7 +102,7 @@
                         <label for="title" class="form-label">Title</label>
 
                         <!-- TITLE text box -->
-                        <input type="text" class="form-control blogField" id="title" placeholder="Title of the blog">
+                        <input type="text" class="form-control blogField" id="title" maxlength="40"  placeholder="Title of the blog">
                     </div>
 
 
@@ -113,7 +113,7 @@
                         <label for="author" class="form-label">Writer</label>
 
                         <!-- Author text box -->
-                        <input type="text" class="form-control blogField" id="author" placeholder="Name of the writer">
+                        <input type="text" class="form-control blogField" id="author" maxlength="25" placeholder="Name of the writer">
                     </div>
 
 
