--- a/blogwrite.html
+++ b/blogwrite.html
@@ -117,6 +117,14 @@
                     </div>
 
 
+                    <div class="mb-4">
+                        <label for="thumbnail" class="form-label">Thumbnail</label>
+
+                        <!-- Author text box -->
+                        <input type="file" accept=".jpg,.jpeg,.png" class="form-control blogField" id="thumbnail">
+                    </div>
+
+
 
                     <!-- Author/By of the blog -->
                     <div class="mb-4">
