--- a/blog.html
+++ b/blog.html
@@ -104,8 +104,8 @@
                     <!-- One -->
                     <div class="col-8 col-sm-5 col-lg-4 col-xl-3 mx-1 blog-card rounded-2 shadow-lg my-4  " >
 
-                        <div class="text-center my-4">
-                            <img src="" alt="">
+                        <div class="text-center mb-4 mt-3 blog-img">
+                            <img src="https://placehold.co/400x300" class="blog-img" alt="">
                         </div>
 
 
