autthentication is no more

--- a/blogwrite.html
+++ b/blogwrite.html
@@ -132,17 +132,12 @@
                     <!-- post button -->
                     <div class="mt-2">
 
-
-                        <a href="" class="btn buttonPost px-3">Post</a>
-
+                        <button class="btn buttonPost px-3" onclick="blog_save()">Post</button>
 
                     </div>
                 </div>
             </div>
         </section>
-
-
-
 
 
 
