--- a/signup.html
+++ b/signup.html
@@ -100,7 +100,7 @@
        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <!-- Application Script -->
-        <script src="authentications.js"></script>
+        <script src="script.js"></script>
 
         <!-- Bootstrap Javascript -->
 
