--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
-        <script src="authentications.js"></script>
+        <script src="script.js"></script>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
