--- a/signin.html
+++ b/signin.html
@@ -74,9 +74,6 @@
                     </div>
                 </div>
 
-
-
-
             </div>
         </div>
 
@@ -88,7 +85,7 @@
        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <!-- Application Script -->
-        <script src="authentications.js"></script>
+        <script src="script.js"></script>
 
         <!-- Bootstrap Javascript -->
 
