--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Media</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
