--- a/quiz.html
+++ b/quiz.html
@@ -58,7 +58,7 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange active">Quiz</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange active">Quiz</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
