--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="" class="nav-link hover-orange">Quiz</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
@@ -91,8 +91,7 @@
         </nav>
 
 
-        <div style="height: 150px;"></div>
-
+        <div style="height: 100px;"></div>
 
 
         <!-- blogs -->
