--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
 
     </head>
 
-    <body class="bgblack">
+    <body class="bgdblue">
 
         <!-- navbar-->
         <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
@@ -54,11 +54,13 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html" class="nav-link  hover-orange">Blog</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
+                                class="nav-link  hover-orange">Blog</a></b>
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange active">Quiz</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                class="nav-link hover-orange active">Quiz</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
@@ -79,22 +81,21 @@
         </nav>
 
 
-        
+        <div style="height: 70px;"></div>
+
 
         <!-- intro -->
-        <section class="bgblack">
+        <section>
 
             <div class="container">
                 <div class="row">
                     <b>
-                        <p class="fs-1 font-exo">ISRO Quiz</p>
+                        <p class="fs-1 font-exo">Quiz</p>
                     </b>
                 </div>
 
                 <div class="row">
-                    <p class="fs-5 font-exo">Test how much you know about ISRO. <br> The questions will start from easy
-                        difficulty and
-                        slowly getting harder, Good Luck</p>
+                    <p class="fs-5 font-exo">Find out how much you know about fire ecology and the environment</p>
                 </div>
             </div>
 
@@ -102,59 +103,67 @@
 
         </section>
 
+        <section>
 
-        <div style="height: 50px;" class="bgblack"></div>
+            <div style="height: 70px;" class="bgdblue"></div>
 
-
-        <section class="quizbg">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill" fill="black" fill-opacity="1"></path>
-            </svg>
-            <div style="height: 70px;" class="quizbg"></div>
-
-            <div class="quiz-container mx-auto rounded-3 py-4" id="quiz">
+            <div class="container">
+                <div class="row">
+                    <div class=" col-8 mx-auto rounded-3 py-4 bgQuiz rounded-5" id="quiz">
 
 
-                <div class="p-2 ms-4">
-                    <p class="fs-3 font-exo quizQuestion mb-5" id="question">question</p>
+                        <div class="p-2 ms-4">
+                            <p class="fs-3 font-exo mb-5 text-center" id="question">question</p>
 
-                    <div class="mt-5">
-                        <div class="form-check my-4">
-                            <input class="form-check-input answer" type="radio" value="a" name="answer" id="a">
-                            <label class="form-check-label fs-5" for="a" id="Labela">a
-                            </label>
+                            <div class="container">
+                                <div class="row justify-content-evenly">
+                                    <div class="col-12 col-md-8 col-lg-5 form-check my-2 bgQuizOption p-2 text-center rounded-3"
+                                        id="aBG">
+                                        <input class="form-check-input answer d-none" type="radio" value="a"
+                                            name="answer" id="a">
+                                        <label class="form-check-label fs-6  p-1 " for="a" id="Labela">
+                                        </label>
+
+                                    </div>
+
+                                    <div class="col-12 col-md-8 col-lg-5 form-check my-2 bgQuizOption p-2 text-center rounded-3"
+                                        id="bBG">
+                                        <input class="form-check-input answer d-none" type="radio" value="b"
+                                            name="answer" id="b">
+                                        <label class="form-check-label fs-6 p-1 " for="b" id="Labelb">
+                                        </label>
+                                    </div>
+
+
+                                    <div class="col-12 col-md-8 col-lg-5 form-check my-2 bgQuizOption p-2 text-center rounded-3"
+                                        id="cBG">
+                                        <input class="form-check-input answer d-none" type="radio" value="c"
+                                            name="answer" id="c">
+                                        <label class="form-check-label fs-6 p-1 " for="c" id="Labelc">
+                                        </label>
+                                    </div>
+
+
+                                    <div class="col-12 col-md-8 col-lg-5 form-check my-2 bgQuizOption p-2 text-center rounded-3"
+                                        id="dBG">
+                                        <input class="form-check-input answer d-none" type="radio" value="d"
+                                            name="answer" id="d">
+                                        <label class="form-check-label fs-6 p-1 " for="d" id="Labeld">
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
 
-                        <div class="form-check my-4">
-                            <input class="form-check-input answer" type="radio" value="b" name="answer" id="b">
-                            <label class="form-check-label fs-5" for="b" id="Labelb">a
-                            </label>
+                        <div class="row justify-content-center">
+                            <button id="submit" class="btn btn-quiz mt-5 mb-4 col-3 col-md-2  px-3 ">Next</button>
                         </div>
 
-
-                        <div class="form-check my-4">
-                            <input class="form-check-input answer" type="radio" value="c" name="answer" id="c">
-                            <label class="form-check-label fs-5" for="c" id="Labelc">a
-                            </label>
-                        </div>
-
-
-                        <div class="form-check my-4">
-                            <input class="form-check-input answer" type="radio" value="d" name="answer" id="d">
-                            <label class="form-check-label fs-5" for="d" id="Labeld">a
-                            </label>
-                        </div>
                     </div>
                 </div>
-
-                <button id="submit" class="btn btn-primary btn-quiz mt-5 ms-4 mb-4">Next</button>
-
-
             </div>
+
         </section>
         <div style="height: 50px;" class="quizbg"></div>
 
@@ -164,8 +173,6 @@
 
 
 
-
-        
 
 
 
