--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body class="bgblack" onload="loadBlogs()">
+    <body class="bgblack">
 
 
         <!-- navbar-->
@@ -146,10 +146,16 @@
 
                 </div>
             </div>
-        </section> -->
+        </section> --_>
 
+        
+       <!-- Firebase Connection -->
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
-        <script src="blogLoader.js"></script>
+        <!-- Application Script -->
+        <script src="script.js"></script>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
