--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,8 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange">Quiz</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
@@ -101,7 +102,7 @@
                 <div class="row justify-content-evenly" id="blogList">
 
                     <!-- One -->
-                    <div class="col-8 col-sm-5 col-lg-4 col-xl-3 mx-1 blog-card rounded-2 shadow-lg my-4  " >
+                    <div class="col-8 col-sm-5 col-lg-4 col-xl-3 mx-1 blog-card rounded-2 shadow-lg my-4  ">
 
                         <div class="text-center mb-4 mt-3 blog-img">
                             <img src="https://placehold.co/400x300" class="img-fluid" alt="">
@@ -120,7 +121,7 @@
                         <div class="text-center mt-4 mb-4">
                             <a href="" class="btn buttonPost">Read </a>
                         </div>
-                    
+
                     </div>
 
 
@@ -129,7 +130,7 @@
             </div>
         </section>
 
-<!-- 
+        <!-- 
         <section id="blogSections">
             <div class="container">
                 <div class="row justify-content-evenly" id="blogList">
@@ -148,14 +149,15 @@
             </div>
         </section> --_>
 
-        
-       <!-- Firebase Connection -->
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+
+        <-- Firebase Connection -->
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <!-- Application Script -->
         <script src="script.js"></script>
+        <script src="getblog.js"></script>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
