--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
 
         <div class="container ">
 
-            <div class="row justify-content-center align-items-center ">
+            <div class="row justify-content-center align-items-center " id="content-area">
 
 
 
