--- a/quiz.html
+++ b/quiz.html
@@ -63,12 +63,26 @@
                                 class="nav-link hover-orange active">Quiz</a></b>
                     </li>
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray" id="profileIcon"
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
+                                class="nav-link ">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
                                     class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                     <path fill-rule="evenodd"
                                         d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                </svg>
+                            </a> </b>
+                    </li>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
+                                onclick="logout()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                    class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                    <path fill-rule="evenodd"
+                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
                                 </svg>
                             </a> </b>
                     </li>
@@ -168,6 +182,38 @@
         <div style="height: 50px;" class="quizbg"></div>
 
 
+
+        <script src="script.js"></script>
+
+
+        <!-- change icon on user login and logout state -->
+        <script>
+
+            const profileIcon = document.getElementById('profileIcon');
+            const logoutIcon = document.getElementById('LogutIcon');
+
+
+            firebase.auth().onAuthStateChanged((user) => {
+
+                if (user) {
+                    console.log('yes');
+                    logoutIcon.classList.remove('d-none');
+                    profileIcon.classList.add('d-none');
+                }
+                else {
+                    console.log('no');
+                    logoutIcon.classList.add('d-none');
+                    profileIcon.classList.remove('d-none');
+                };
+
+            });
+
+            function logout() {
+                auth.signOut();
+                alert("Signed out successfully");
+            }
+
+        </script>
 
 
 
