--- a/blogwrite.html
+++ b/blogwrite.html
@@ -45,12 +45,12 @@
                 <ul class="navbar-nav ms-auto  d-flex align-items-center ">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange">Home</a></b>
+                                class="nav-link hover-orange ">Home</a></b>
                     </li>
 
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
-                                class="nav-link  hover-orange">About</a></b>
+                                class="nav-link  hover-orange ">About</a></b>
                     </li>
 
 
@@ -59,15 +59,30 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange">Media</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray" id="profileIcon"
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
+                                class="nav-link ">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
                                     class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                     <path fill-rule="evenodd"
                                         d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                </svg>
+                            </a> </b>
+                    </li>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
+                                onclick="logout()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                    class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                    <path fill-rule="evenodd"
+                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
                                 </svg>
                             </a> </b>
                     </li>
@@ -102,7 +117,8 @@
                         <label for="title" class="form-label">Title</label>
 
                         <!-- TITLE text box -->
-                        <input type="text" class="form-control blogField" id="title" maxlength="40"  placeholder="Title of the blog">
+                        <input type="text" class="form-control blogField" id="title" maxlength="40"
+                            placeholder="Title of the blog">
                     </div>
 
 
@@ -113,7 +129,8 @@
                         <label for="author" class="form-label">Writer</label>
 
                         <!-- Author text box -->
-                        <input type="text" class="form-control blogField" id="author" maxlength="25" placeholder="Name of the writer">
+                        <input type="text" class="form-control blogField" id="author" maxlength="25"
+                            placeholder="Name of the writer">
                     </div>
 
 
@@ -147,6 +164,7 @@
             </div>
         </section>
 
+        <script src="script.js"></script>
 
 
         <script type="text/javascript">
@@ -157,6 +175,36 @@
                 this.style.height = 'auto';
                 this.style.height = this.scrollHeight + 'px';
             }
+        </script>
+
+
+        <!-- change icon on user login and logout state -->
+        <script>
+
+            const profileIcon = document.getElementById('profileIcon');
+            const logoutIcon = document.getElementById('LogutIcon');
+
+
+            firebase.auth().onAuthStateChanged((user) => {
+
+                if (user) {
+                    console.log('yes');
+                    logoutIcon.classList.remove('d-none');
+                    profileIcon.classList.add('d-none');
+                }
+                else {
+                    console.log('no');
+                    logoutIcon.classList.add('d-none');
+                    profileIcon.classList.remove('d-none');
+                };
+
+            });
+
+            function logout() {
+                auth.signOut();
+                alert("Signed out successfully");
+            }
+
         </script>
 
         <!-- Bootstrap Javascript  -->
