--- a/index.html
+++ b/index.html
@@ -64,15 +64,30 @@
                     </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html" class="nav-link hover-orange">Quiz</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="signup.html" class="nav-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray" id="profileIcon"
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
+                                class="nav-link ">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
                                     class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                     <path fill-rule="evenodd"
                                         d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                </svg>
+                            </a> </b>
+                    </li>
+
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
+                                onclick="logout()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                    class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                    <path fill-rule="evenodd"
+                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
                                 </svg>
                             </a> </b>
                     </li>
@@ -107,7 +122,7 @@
         </section>
 
 
-        
+
 
 
         <!-- Section 1 -->
@@ -132,10 +147,11 @@
 
                         <h3 class="fs-2">What is Fire Ecology?</h3>
 
-                        <p class="mt-5 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam nemo,
-                            nobis voluptate
-                            sapiente adipisci odio dolores repellendus atque vel consequatur. Neque excepturi culpa
-                            doloremque, eum dolorem dolor molestiae explicabo quasi!</p>
+                        <p class="mt-5 mx-auto">Fire ecology is the scientific study of the relationship between fire
+                            and the natural environment, focusing on how fires influence ecosystems, vegetation,
+                            wildlife, and ecological processes. It encompasses the analysis of fire's role as a natural
+                            disturbance agent, its effects on landscapes and species, the adaptations of organisms to
+                            fire, and the ecological consequences of fire suppression and management</p>
 
 
 
@@ -299,12 +315,60 @@
         </section>
 
 
+
+
+
+
+
+
+
+
+
+
         <!-- Firebase Connection -->
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
-       <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
         <script src="script.js"></script>
+
+
+        <!-- change icon on user login and logout state -->
+        <script>
+
+            const profileIcon = document.getElementById('profileIcon');
+            const logoutIcon = document.getElementById('LogutIcon');
+
+
+            firebase.auth().onAuthStateChanged((user) => {
+
+                if (user) {
+                    console.log('yes');
+                    logoutIcon.classList.remove('d-none');
+                    profileIcon.classList.add('d-none');
+                }
+                else {
+                    console.log('no');
+                    logoutIcon.classList.add('d-none');
+                    profileIcon.classList.remove('d-none');
+                };
+
+            });
+
+            function logout() {
+                auth.signOut();
+                alert("Signed out successfully");
+            }
+
+        </script>
+
+
+
+
+
+
+
+
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -322,6 +386,14 @@
         <script>
             AOS.init();
         </script>
+
+
+
+
+
+
+
+
 
     </body>
 
