--- a/quiz.html
+++ b/quiz.html
@@ -117,13 +117,15 @@
 
         </section>
 
+
+        <!-- quiz -->
         <section>
 
             <div style="height: 70px;" class="bgdblue"></div>
 
             <div class="container">
                 <div class="row">
-                    <div class=" col-8 mx-auto rounded-3 py-4 bgQuiz rounded-5" id="quiz">
+                    <div class=" col-11 col-md-10 col-lg-8 mx-auto rounded-3 py-4 bgQuiz rounded-5" id="quiz">
 
 
                         <div class="p-2 ms-4">
