--- a/blogwrite.html
+++ b/blogwrite.html
@@ -164,6 +164,11 @@
             </div>
         </section>
 
+        <!-- Firebase Connection -->
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+
         <script src="script.js"></script>
 
 
